--- a/Ophysics.html
+++ b/Ophysics.html
@@ -255,9 +255,8 @@ input[type="radio"] {
 </div>
 
 <div id="restartButton" align="center" style="display: none;"> 
-      <button style="margin: 20px;"  onclick="scoreData()">登記成績</button>
-      <a href="https://guidephy.github.io/Ophysics" ><button style="margin: 20px;">繼續學習</button>
-       </a>
+      <button style="margin: 20px;"  onclick="scoreData()" id="scoreData">登記成績</button>
+      <a href="https://guidephy.github.io/Ophysics" ><button style="margin: 20px;">繼續學習</button></a>
 </div>
 
 <br> 
