--- a/Ophysics.html
+++ b/Ophysics.html
@@ -257,6 +257,8 @@ input[type="radio"] {
 <div id="restartButton" align="center" style="display: none;"> 
       <button style="margin: 20px;"  onclick="scoreData()" id="scoreData">登記成績</button>
       <a href="https://guidephy.github.io/Ophysics" ><button style="margin: 20px;">繼續學習</button></a>
+
+      <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQkPQvWslhK-dGwzeImWAei8-kGcJoXL9sSHL2LgbenIsErrRkrF5EB0gGUfG1TxoqRYkjLoJYSmP3M/pubhtml?gid=0&single=true" target="_blank" id="lookScore"style="display: none;"><button style="margin: 20px;">成績查詢</button></a>
 </div>
 
 <br> 
