--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
           </li>
           
-          <li><a href="https://drive.google.com/drive/folders/1cgsIkEtXjsELqbnjFXijRvs7dBSFpdSW?usp=sharing"</a>高三複習</li>
+          <li><a href="https://drive.google.com/drive/folders/1cgsIkEtXjsELqbnjFXijRvs7dBSFpdSW?usp=sharing"></a>高三複習</li>
         </ul>
       </nav>
     </header>
