--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
           </li>
           
-          <li><a href="https://guidephy.github.io/Ophysics">物理自學平台</a>高三複習</li>
+          <li><a href="https://guidephy.github.io/Ophysics">物理自學平台</a></li>
         </ul>
       </nav>
     </header>
