--- a/Ophysics.html
+++ b/Ophysics.html
@@ -168,6 +168,7 @@ input[type="radio"] {
           <li class="section" onclick="handleSectionClick(this)">量子論</li>
           <li class="section" onclick="handleSectionClick(this)">光電效應</li>
           <li class="section" onclick="handleSectionClick(this)">光的本質</li>
+          <li class="section" onclick="handleSectionClick(this)">物質波</li>
         </ul>
       </li>
       
