--- a/Ophysics.html
+++ b/Ophysics.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
    <title>Guidephy物理自學</title>
-   <meta name="description" content="提供物理與程式學習的教學與心得">
+   <meta name="description" content="高中物理自學">
   <link rel="icon" type="image/png" href="images/GuidephyNotes-sLogo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-site-verification" content="tvvXxbI18opHJBKJIQdDbub-eFv-PrXfNGiKNXskiL8" />
