--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
          <li><a href="physics.html">物理學習</a></li>
          <li><a href="program.html">程式語言</a></li>
          <li><a href="exp.html">科學實驗</a></li>
-         <li><a href="https://www.canva.com/design/DAF5c03YLjk/6MCfhvORw7mqLrKDW8LI-w/view?utm_content=DAF5c03YLjk&utm_campaign=designshare&utm_medium=link&utm_source=editor">讀書心得</a></li>
+         <li><a href="https://www.canva.com/design/DAF5pBeagKY/u4865MuozYuIhntsJBAsAA/view?utm_content=DAF5pBeagKY&utm_campaign=designshare&utm_medium=link&utm_source=editor">讀書心得</a></li>
       </ul>
 
       <h3 class="sub-title">About Me</h3>
