--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
          <li><a href="physics.html">物理學習</a></li>
          <li><a href="program.html">程式語言</a></li>
          <li><a href="exp.html">科學實驗</a></li>
-         <li><a href="https://www.canva.com/design/DAFNATqUImA/gLYAslebBwU-u6lNNVOAyQ/view?utm_content=DAFNATqUImA&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">電影欣賞社</a></li>
+         <li><a href="https://docs.google.com/presentation/d/1Fx4CjtDsQlWheAd4Zu5hnfO9vH7KkYilhhHydilal0g/edit?usp=sharing">專題分享</a></li>
       </ul>
 
       <h3 class="sub-title">About Me</h3>
