--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
          <li><a href="physics.html">物理學習</a></li>
          <li><a href="program.html">程式語言</a></li>
          <li><a href="exp.html">科學實驗</a></li>
-         <li><a href="https://docs.google.com/presentation/d/1Fx4CjtDsQlWheAd4Zu5hnfO9vH7KkYilhhHydilal0g/edit?usp=sharing">專題分享</a></li>
+         <li><a href="https://drive.google.com/drive/folders/1N3tRicPhXhlVJuKKN__0Rxl8QZL4LJFR?usp=sharing">台語簡報</a></li>
       </ul>
 
       <h3 class="sub-title">About Me</h3>
