--- a/Ttest.html
+++ b/Ttest.html
@@ -246,7 +246,7 @@ input[type="radio"] {
 
   <footer>
     <div class="wrapper">
-      <p><small>&copy; 觀音高中物理科 林仟弘老師</small></p>
+      <p><small>&copy; 桃園市立觀音高中輔導室</small></p>
     </div>
   </footer>
 </body>
