--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
               <div class="dropdown-content" id="myDropdown2">
                   <a href="phyhistorytest.html">物理史小測驗</a>
                   <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
+                  <a href="Ttest.html">國中技藝競賽題庫</a>
               </div>
 
           </li>
