--- a/Ttest.html
+++ b/Ttest.html
@@ -111,7 +111,7 @@ input[type="radio"] {
   </div>
   
     <div class="wrapper">
-      <h2 class="page-title">國中技藝競賽練習</h2>
+      <h2 class="page-title">國中技藝競賽</h2>
     </div>
 
   <div class="news-contents wrapper">
