--- a/AGW.html
+++ b/AGW.html
@@ -17,19 +17,43 @@
 </head>
 
 <body>
+  <div align="center">
+  <h2 style="color:blue;">空氣取水IoT系統</h2>
+  </div>
+
+  <div align="center" id="startButton">
   <button id="sendBtn" onclick="send()">開始運行</button><br><br>
-  <div><button id="demo-area-05-btn1" class="db5">按鈕 1</button>
-    <button id="demo-area-05-btn2" class="db5">按鈕 2</button>
-    <button id="demo-area-05-btn3" class="db5">按鈕 3</button>
-    <button id="demo-area-05-btn4" class="db5">按鈕 4</button>
-    <button id="demo-area-05-btn5" class="db5">按鈕 5</button></div>
+  </div>
+
+
+  <div align="center" id="nowState"style="display: none;">
+  <h3 >裝置狀態</h3>
+  <p style="display:inline;">溫度:</p> <p style="display:inline;">濕度:</p><br>
+  <h3 id="stateName" style="color:red;"></h3>
+  <p style="display:inline;">進氣風扇:</p><button id="fanButton" style="display:inline;" >off</button>
+  <br>
+  <p style="display:inline;">致冷晶片:</p><button id="coldButton" style="display:inline;">off</button>
+  </div>
+  <br>
+
+  <div align="center" id="manualControl" style="display: none;">
+  <button id="sendBtn" onclick="send()">切換手動模式</button><br>
+  </div>
+  
+  <div align="center" id="autoControl" style="display: none;">
+  <button id="sendBtn" onclick="send()">切換智能模式</button><br>
+  </div>
+
 </body>
 
 <script>
-  var fanrelay;
+var fanrelay;
 var coldrelay;
 
 function send() {
+
+document.getElementById('fanButton').innerHTML="off"
+document.getElementById('coldButton').innerHTML="off"
 
 boardReady({board: 'Smart', device: '10QRRggQ', transport: 'mqtt', multi: true}, function (board) {
   board.samplingInterval = 50;
@@ -37,13 +61,38 @@ boardReady({board: 'Smart', device: '10QRRggQ', transport: 'mqtt', multi: true},
   coldrelay = getLed(board, 14);
   fanrelay.on();
   coldrelay.on();
-  document.getElementById('demo-area-05-btn1').addEventListener('click',function () {
+  document.getElementById('fanButton').addEventListener('click',function () {
     fanrelay.toggle();
+    if(document.getElementById('fanButton').innerHTML=="off"){
+      document.getElementById('fanButton').innerHTML="on";
+    }else{
+      document.getElementById('fanButton').innerHTML="off";
+    }
+ 
   });
-  document.getElementById('demo-area-05-btn2').addEventListener('click',function () {
+  document.getElementById('coldButton').addEventListener('click',function () {
     coldrelay.toggle();
+     if(document.getElementById('coldButton').innerHTML=="off"){
+      document.getElementById('coldButton').innerHTML="on";
+    }else{
+      document.getElementById('coldButton').innerHTML="off";
+    }
+ 
   });
 });
+  document.getElementById("nowState").style.display="block";
+ 
+  document.getElementById("startButton").style.display="none";
+
+  if(document.getElementById('stateName').innerHTML=="手動模式"){
+    document.getElementById('stateName').innerHTML="智能模式";
+    document.getElementById("manualControl").style.display="block";
+    document.getElementById("autoControl").style.display="none";
+  }else{
+    document.getElementById('stateName').innerHTML="手動模式";
+    document.getElementById("autoControl").style.display="block";
+    document.getElementById("manualControl").style.display="none";
+  }
 }
 </script>
 
