--- a/index.html
+++ b/index.html
@@ -374,6 +374,7 @@
          <li><a href="program.html">程式語言</a></li>
          <li><a href="exp.html">科學實驗</a></li>
          <li><a href="https://books.i-yuida.com.tw/">台語電子書</a></li>
+         <li><a href="https://youtu.be/sqAxw2jU3Bo?si=q3fJOep93aAq4gir">電影分享</a></li>
       </ul>
 
       <h3 class="sub-title">About Me</h3>
