--- a/AGW.html
+++ b/AGW.html
@@ -30,7 +30,7 @@
   <h3 >裝置狀態</h3>
   <p style="display:inline;"id="dhtData">溫度:, 溼度:</p> <br>
   <h3 id="stateName" style="color:red;"></h3>
-  <h6 id="explain" style="color:gray;">智能模式下<br>致冷晶片於濕度高於40%啟動<br>進氣風扇於溫度高於15°C啟動。</h6>
+  <h6 id="explain" style="color:gray;">智能模式下<br>致冷晶片於濕度高於40%啟動<br>進氣風扇於溫度高於15°C啟動</h6>
   <p style="display:inline;" id="fanState">進氣風扇:</p><button id="fanButton" style="display:inline;" >off</button>
   <br>
   <p style="display:inline;" id="coldState">致冷晶片:</p><button id="coldButton" style="display:inline;">off</button>
