--- a/Machineroom.html
+++ b/Machineroom.html
@@ -26,7 +26,7 @@
 
   <div align="center" id="nowState">
   <h3 >機房狀態</h3>
-  <p style="display:inline;"id="dhtData">溫度:, 溼度:</p> <br>
+  <p style="display:inline;"id="dhtData">裝置尚末連線</p> <br>
   </div>
   <br>
 
