--- a/physics.html
+++ b/physics.html
@@ -229,7 +229,7 @@
         height="360"
         allowfullscreen>
 </iframe>
-     <p align="right">來源:<a target="_blank" href="https://phet.colorado.edu/zh_TW/simulations/geometric-optics">PHET</p>
+     <p align="right">來源:<a target="_blank" href="https://phet.colorado.edu/zh_TW/simulations/geometric-optics">PHET</a></p>
 
         
 </div>
