--- a/physics.html
+++ b/physics.html
@@ -243,7 +243,7 @@
       </header>
     
 <div>
-  <img src="images/physicsReview/reviewForPhysics-1.png" target="_blank" href="https://drive.google.com/file/d/1fb3lP917DSh2iZsciVsF-ciR22KBB_7Y/view?usp=sharing" alt="">
+  <a target="_blank" href="https://drive.google.com/file/d/1fb3lP917DSh2iZsciVsF-ciR22KBB_7Y/view?usp=sharing" alt=""><img src="images/physicsReview/reviewForPhysics-1.png" ></a>
   </div>
 <br><br> 
   
