--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
          <li><a href="program.html">程式語言</a></li>
          <li><a href="exp.html">科學實驗</a></li>
          <li><a href="https://books.i-yuida.com.tw/">台語電子書</a></li>
-         <li><a href="https://youtu.be/sqAxw2jU3Bo?si=q3fJOep93aAq4gir">電影分享</a></li>
+         <li><a href="https://drive.google.com/drive/folders/1eV2QRs1FCV_hG_ZvQkAP-wTIE8s9GbuMs3lvW33-SuE8XCETPO--nXvV9xpSk_CSCMMHIc1G?usp=drive_link">探究影片分享</a></li>
       </ul>
 
       <h3 class="sub-title">About Me</h3>
