--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
        Guidephy學習教室提供物理及程式語言的學習分享，希望學生能透過這裡的學習資源，達到有效的學習。
       </p>
       
-       <h3 class="sub-title"><a href="https://drive.google.com/drive/folders/1tptHG4ugN5Bj9C_tJnZuQ7UMp7iiumOR?usp=sharing">CONTACT</h3>
+       <h3 class="sub-title"><a href="https://ufile.io/">CONTACT</h3>
       <p>
        E-mail:<br>
         ttnpgjqua26@gish.tyc.edu.tw
