--- a/peopleNumber.html
+++ b/peopleNumber.html
@@ -27,7 +27,7 @@
   <div align="center" id="nowState">
   <h3 >今日進館人數</h3>
 
-  <p style="display:inline;"id="todayNumber">裝置尚末連線</p> <br>
+  <p style="display:inline;"id="todayNumber">0</p> <br>
 
   <p style="display:inline;"id="uDistance">裝置尚末連線</p> <br>
   <br>
