--- a/WebDesign_lesson3.html
+++ b/WebDesign_lesson3.html
@@ -299,6 +299,15 @@
       3、行高「<font color="red">line-height</font>」:不需要單位，通常設1.5~2之間。<br><br>
       4、背景顏色「<font color="red">background-color</font>」:可直接打顏色名稱或是使用色碼。<br>
          備註:色碼表可參考右方連結:<a href="https://www.wibibi.com/info.php?tid=372">色碼表</a></p>
+      <br>
+      <p>網頁背景也可做修改:<br>
+      1、網頁背景顏色「<font color="red">bgcolor</font>」:可直接打顏色名稱或是使用色碼。 <br>
+        <body bgcolor="#ECFFFF"><br><br>
+        
+      2、網頁背景圖片「<font color="red">fbackground-image:url('圖片網址')</font>」:將'圖片網址'改成欲放的圖片連結<br>
+         body{<br>
+        background-image: url('https://guidephy.github.io/counseling/background.png');{<br>
+        }{<br><br>
 
       <p>練習:請將style.css的檔案內容修改為下方程式碼，並於瀏覽器打開index.html觀看網頁，
         並嘗試自行修改下方的CSS，並看網頁的變化，以理解CSS的寫法。</p>
