--- a/WebDesign_lesson3.html
+++ b/WebDesign_lesson3.html
@@ -302,12 +302,12 @@
       <br>
       <p>網頁背景也可做修改:<br>
       1、網頁背景顏色「<font color="red">bgcolor</font>」:可直接打顏色名稱或是使用色碼。 <br>
-        <body bgcolor="#ECFFFF"><br><br>
+        &lt;body bgcolor="#ECFFFF"&gt<br><br>
         
       2、網頁背景圖片「<font color="red">fbackground-image:url('圖片網址')</font>」:將'圖片網址'改成欲放的圖片連結<br>
          body{<br>
-        background-image: url('https://guidephy.github.io/counseling/background.png');{<br>
-        }{<br><br>
+        background-image: url('圖片網址');{<br>
+        }<br><br>
 
       <p>練習:請將style.css的檔案內容修改為下方程式碼，並於瀏覽器打開index.html觀看網頁，
         並嘗試自行修改下方的CSS，並看網頁的變化，以理解CSS的寫法。</p>
