--- a/WebDesign_lesson3.html
+++ b/WebDesign_lesson3.html
@@ -300,14 +300,7 @@
       4、背景顏色「<font color="red">background-color</font>」:可直接打顏色名稱或是使用色碼。<br>
          備註:色碼表可參考右方連結:<a href="https://www.wibibi.com/info.php?tid=372">色碼表</a></p>
       <br>
-      <p>網頁背景也可做修改:<br>
-      1、網頁背景顏色「<font color="red">bgcolor</font>」:可直接打顏色名稱或是使用色碼。 <br>
-        &lt;body bgcolor="#ECFFFF"&gt<br><br>
-        
-      2、網頁背景圖片「<font color="red">fbackground-image:url('圖片網址')</font>」:將'圖片網址'改成欲放的圖片連結<br>
-         body{<br>
-        background-image: url('圖片網址');{<br>
-        }<br><br>
+
 
       <p>練習:請將style.css的檔案內容修改為下方程式碼，並於瀏覽器打開index.html觀看網頁，
         並嘗試自行修改下方的CSS，並看網頁的變化，以理解CSS的寫法。</p>
@@ -336,6 +329,15 @@
        }</font><br>
 
       </div><br>
+
+      <p>網頁背景也可做修改:<br>
+      1、網頁背景顏色「<font color="red">bgcolor</font>」:可直接打顏色名稱或是使用色碼。 <br>
+        &lt;body bgcolor="#ECFFFF"&gt<br><br>
+        
+      2、網頁背景圖片「<font color="red">fbackground-image:url('圖片網址')</font>」:將'圖片網址'改成欲放的圖片連結<br>
+         body{<br>
+        background-image: url('圖片網址');{<br>
+        }<br><br>
 
       <p>其它常用屬性還有對齊「<font color="red">text-align</font>」、字體「<font color="red">font-family</font>」，未來有機會再介紹。</p>
 
@@ -374,25 +376,9 @@
 
       3.CSS美化網頁。(20%)<br>
    
-      4.基本資料表。(40%)<br>
-      (需用html table繪製，不能直接貼圖片)<br>
+      4.學習成果(可用canva簡報嵌入)。(40%)<br>
 
       5.網頁排版(10%)</p>
-
-
-      <p>備註:基本資料表可參考下圖，或從你個申科系中有需上傳基本資料表的格式作為設計。</p>
-
-      <div style="text-align:center;">
-      <img src="images/WebDesign/WebDesign-3-5.png"  alt=""><br>
-      </div>
-
-
-
-
-
-
-
-
 
 
     </article>
