--- a/peopleNumber.html
+++ b/peopleNumber.html
@@ -42,12 +42,14 @@
     }
 
     th, td {
-      padding: 10px;
+      padding: 5px;
+      
       color:gray;
     }
 
     th {
       font-weight: bold;
+       font-size: 0.8em;
     }
 
     #date {
