--- a/index.html
+++ b/index.html
@@ -374,7 +374,8 @@
          <li><a href="program.html">程式語言</a></li>
          <li><a href="exp.html">科學實驗</a></li>
          <li><a href="https://books.i-yuida.com.tw/">台語電子書</a></li>
-         <li><a href="https://drive.google.com/drive/folders/1eV2QRs1FCV_hG_ZvQkAP-wTIE8s9GbuMs3lvW33-SuE8XCETPO--nXvV9xpSk_CSCMMHIc1G?usp=drive_link">探究影片分享</a></li>
+         <li><a href="https://www.canva.com/design/DAGEyT11OzY/EvcqiMi3vKHqSprGnDoyVA/view?utm_content=DAGEyT11OzY&utm_campaign=designshare&utm_medium=link&utm_source=editor">空氣產水</a></li>
+        <li><a href="https://www.canva.com/design/DAGEczR-i5s/aYz9MwK2zJ8p9fw0EpAYBg/view?utm_content=DAGEczR-i5s&utm_campaign=designshare&utm_medium=link&utm_source=editor">陽空氫鬆產能</a></li>
       </ul>
 
       <h3 class="sub-title">About Me</h3>
