--- a/Ophysics.html
+++ b/Ophysics.html
@@ -166,6 +166,7 @@ input[type="radio"] {
         <span class="chapter-title">第五章</span>
         <ul>
           <li class="section" onclick="handleSectionClick(this)">功與能</li>
+          <li class="section" onclick="handleSectionClick(this)">力學能守恆</li>
         </ul>
       </li>
 
