--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
 <head>
   <meta charset="utf-8">
-   <title>Guidephy學習教室</title>
-   <meta name="description" content="提供物理與程式學習的教學與心得">
+  <title>Guidephy學習教室</title>
+  <meta name="description" content="提供物理與程式學習的教學與心得">
   <link rel="icon" type="image/png" href="images/GuidephyNotes-sLogo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -16,15 +17,15 @@
   
   <script src="JS/menu.js"></script>
 
- <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LQRF00LJWJ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LQRF00LJWJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'G-LQRF00LJWJ');
-</script>
+    gtag('config', 'G-LQRF00LJWJ', { 'cookie_flags': 'SameSite=None;Secure' });
+  </script>
   
 </head>
 
