--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Guidephy學習教室</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css">
+         <script src="JS/menu.js"></script>
    
 
 </head>
