--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="utf-8">
     <title>Guidephy學習教室</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/style.css">
-         <script src="JS/menu.js"></script>
+    <meta name="google-site-verification" content="tvvXxbI18opHJBKJIQdDbub-eFv-PrXfNGiKNXskiL8" />
+    
+    <link rel="stylesheet" href="css/style.css">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LQRF00LJWJ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-LQRF00LJWJ');
+    </script>
+    <script src="JS/menu.js"></script>
    
 
 </head>
