--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="utf-8">
     <title>Guidephy學習教室</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="google-site-verification" content="tvvXxbI18opHJBKJIQdDbub-eFv-PrXfNGiKNXskiL8" />
-    
     <link rel="stylesheet" href="css/style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LQRF00LJWJ"></script>
     <script>
@@ -13,13 +11,101 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-LQRF00LJWJ');
+    gtag('config', 'G-LQRF00LJWJ', {
+      cookie_flags: 'SameSite=None;Secure'
+    });
     </script>
-    <script src="JS/menu.js"></script>
-   
-
 </head>
 <body>
+    <header class="page-header wrapper">
+        <h1><a href="https://guidephy.github.io"><img class="logo" src="images/GuidephyNotesLogo.png" alt="Guidephy學習教室首頁"></a></h1>
+        <nav>
+            <ul class="main-nav">
+                <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction1()">學習講義</a>
+                    <div class="dropdown-content" id="myDropdown1">
+                        <a href="physics.html">物理課程</a>
+                        <a href="WebDesign.html">網頁設計</a>
+                        <a href="LineBot.html">LineBot</a>
+                        <a href="VPython.html">VPython</a>
+                        <a href="Ohtaigi.html">台語課程</a>
+                    </div>
+                </li>
+                <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction2()">線上題庫</a>
+                    <div class="dropdown-content" id="myDropdown2">
+                        <a href="phyhistorytest.html">物理史小測驗</a>
+                        <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
+                        <a href="Ttest.html">國中技藝競賽題庫</a>
+                    </div>
+                </li>
+                <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction3()">作品分享</a>
+                    <div class="dropdown-content" id="myDropdown3">
+                        <a href="https://guidephy.github.io/vrguanyin/">VR遊觀音</a>
+                        <a href="https://guidephy.github.io/EnergyTransition/">Planet713計畫</a>
+                        <a href="https://guidephy.github.io/imagetotext/">影像擷取文字系統</a>
+                        <a href="https://guidephy.github.io/111ceproject.html">碳捕捉暨Na循環發電IoT系統</a>
+                        <a href="https://guidephy.github.io/grades.html">課堂計分</a>
+                        <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
+                        <a href="https://guidephy.notion.site/Learn-to-Create-An-RPG-Game-In-Unity-Tutorial-Udemy-e1e79f20d692448b86fd4fc740aac94b?pvs=4">unity2D學習筆記</a>
+                        <a href="https://guidephy.notion.site/Unity-Learning-d45d104ccbf34dcaa15c937affee7546">unity3D學習筆記</a>
+                    </div>
+                </li>
+                <li><a href="https://guidephy.github.io/Ophysics">物理自學平台</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <!-- Your content here -->
+
+    <script>
+        (function() {
+            function toggleDropdown(dropdownId) {
+                document.getElementById(dropdownId).classList.toggle("show");
+            }
+
+            window.myFunction1 = function() {
+                toggleDropdown("myDropdown1");
+            };
+
+            window.myFunction2 = function() {
+                toggleDropdown("myDropdown2");
+            };
+
+            window.myFunction3 = function() {
+                toggleDropdown("myDropdown3");
+            };
+
+            window.myFunction4 = function() {
+                toggleDropdown("myDropdown4");
+            };
+
+            // Close the dropdown if the user clicks outside of it
+            window.onclick = function(e) {
+                if (!e.target.matches('.dropbtn')) {
+                    var dropdowns = document.getElementsByClassName("dropdown-content");
+                    for (var d = 0; d < dropdowns.length; d++) {
+                        var openDropdown = dropdowns[d];
+                        if (openDropdown.classList.contains('show')) {
+                            openDropdown.classList.remove('show');
+                        }
+                    }
+                }
+            };
+        })();
+
+        // AudioContext handling
+        var audioContext = new (window.AudioContext || window.webkitAudioContext)();
+
+        document.addEventListener('click', function() {
+            if (audioContext.state === 'suspended') {
+                audioContext.resume();
+            }
+        });
+
+        document.addEventListener('keydown', function() {
+            if (audioContext.state === 'suspended') {
+                audioContext.resume();
+            }
+        });
+    </script>
 </body>
 </html>
