--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
 <head>
-    <meta charset="utf-8">
-    <title>Guidephy學習教室</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LQRF00LJWJ"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+  <meta charset="utf-8">
+   <title>Guidephy學習教室</title>
+   <meta name="description" content="提供物理與程式學習的教學與心得">
+  <link rel="icon" type="image/png" href="images/GuidephyNotes-sLogo.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    gtag('config', 'G-LQRF00LJWJ', {
-      cookie_flags: 'SameSite=None;Secure'
-    });
-    </script>
+  <!-- CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+  
+  <meta name="google-site-verification" content="tvvXxbI18opHJBKJIQdDbub-eFv-PrXfNGiKNXskiL8" />
+  
+  <script src="JS/menu.js"></script>
+
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LQRF00LJWJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LQRF00LJWJ');
+</script>
+  
 </head>
 
-
-    <body>
+<body>
   <div id="news" class="big-bg">
     <header class="page-header wrapper">
       <h1><a href="https://guidephy.github.io"><img class="logo" src="images/GuidephyNotesLogo.png" alt="Guidephy學習教室首頁"></a></h1>
@@ -397,58 +407,5 @@
   </footer>
 
 
-</body>
-
-    <script>
-        (function() {
-            function toggleDropdown(dropdownId) {
-                document.getElementById(dropdownId).classList.toggle("show");
-            }
-
-            window.myFunction1 = function() {
-                toggleDropdown("myDropdown1");
-            };
-
-            window.myFunction2 = function() {
-                toggleDropdown("myDropdown2");
-            };
-
-            window.myFunction3 = function() {
-                toggleDropdown("myDropdown3");
-            };
-
-            window.myFunction4 = function() {
-                toggleDropdown("myDropdown4");
-            };
-
-            // Close the dropdown if the user clicks outside of it
-            window.onclick = function(e) {
-                if (!e.target.matches('.dropbtn')) {
-                    var dropdowns = document.getElementsByClassName("dropdown-content");
-                    for (var d = 0; d < dropdowns.length; d++) {
-                        var openDropdown = dropdowns[d];
-                        if (openDropdown.classList.contains('show')) {
-                            openDropdown.classList.remove('show');
-                        }
-                    }
-                }
-            };
-        })();
-
-        // AudioContext handling
-        var audioContext = new (window.AudioContext || window.webkitAudioContext)();
-
-        document.addEventListener('click', function() {
-            if (audioContext.state === 'suspended') {
-                audioContext.resume();
-            }
-        });
-
-        document.addEventListener('keydown', function() {
-            if (audioContext.state === 'suspended') {
-                audioContext.resume();
-            }
-        });
-    </script>
 </body>
 </html>
