--- a/abc.html
+++ b/abc.html
@@ -60,6 +60,36 @@
 
   </div>
 
+
+   <aside>
+      <h3 class="sub-title">類別</h3>
+      <ul class="sub-menu">
+         <li><a href="physics.html">物理學習</a></li>
+         <li><a href="program.html">程式語言</a></li>
+         <li><a href="exp.html">科學實驗</a></li>
+         <li><a href="https://books.i-yuida.com.tw/">台語電子書</a></li>
+        <li><a href="https://gimy.ai/vod/234682.html">台語電影賞析</a></li>
+      </ul>
+
+      <h3 class="sub-title">About Me</h3>
+      <p>
+       Guidephy學習教室提供物理及程式語言的學習分享，希望學生能透過這裡的學習資源，達到有效的學習。
+      </p>
+      
+       <h3 class="sub-title"><a href="https://ufile.io/">CONTACT</a></h3>
+      <p>
+       E-mail:<br>
+        ttnpgjqua26@gish.tyc.edu.tw
+      </p>
+      <img style="text-align:center;" src="images/guidephy-qrcode.png"  alt="guidephy-qrcode">
+      
+       <h3 class="sub-title">瀏覽人次</h3>
+      <br>
+   
+<img src="https://hitwebcounter.com/counter/counter.php?page=8081074&style=0003&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" style="float: center;" /></a>             
+
+    </aside>
+
   
   
 
