--- a/Ophysics.html
+++ b/Ophysics.html
@@ -14,7 +14,6 @@
   <script src="JS/menu.js" defer></script>
   <script src="JS/Ophysics.js" defer></script>
   <style>
-    /* 更新的 CSS 規則，將 radio 文字靠左 */
     .radio-container {
       display: flex;
       justify-content: space-between;
@@ -25,10 +24,9 @@
       padding: 0 10px;
     }
 
-    /* 將文字靠左 */
     label {
       display: flex;
-      align-items: center; /* 垂直居中對齊文字和 radio 按鈕 */
+      align-items: center;
     }
 
     input[type="radio"] {
@@ -36,11 +34,10 @@
     }
 
     #q3Answer {
-      border: 1px solid #ccc; /* 設置框線為淺灰色 */
-      padding: 8px; /* 設置內邊距以增加舒適性 */
+      border: 1px solid #ccc;
+      padding: 8px;
     }
 
-    /* 添加 CSS 樣式以調整章節清單的外觀 */
     .chapter-list {
       font-family: Arial, sans-serif;
       max-width: 400px;
@@ -53,34 +50,34 @@
     }
 
     .chapter-title {
-      font-size: 24px; /* 章節標題字體大小 */
+      font-size: 24px;
       font-weight: bold;
-      color: #3366cc; /* 章節標題顏色 */
+      color: #3366cc;
       display: block;
-      margin-bottom: 10px; /* 章節標題和節標題之間的間距 */
+      margin-bottom: 10px;
     }
 
     .section {
-      font-size: 18px; /* 節標題字體大小 */
-      color: #ff6600; /* 節標題顏色 */
+      font-size: 18px;
+      color: #ff6600;
       list-style-type: none;
-      cursor: pointer; /* 將滑鼠指標設置為手指 */
+      cursor: pointer;
     }
 
     .input-row label {
-      display: block; /* 設置為 block，每個元素佔據一行 */
+      display: block;
       font-weight: bold;
-      margin-bottom: 5px; /* 在上方添加一些間距 */
+      margin-bottom: 5px;
     }
 
     .input-row select,
     .input-row input {
-      display: block; /* 設置為 block，每個元素佔據一行 */
+      display: block;
       padding: 5px;
       border: 1px solid #ccc;
       border-radius: 5px;
-      margin-bottom: 10px; /* 在下方添加一些間距 */
-      width: 50%; /* 填充父元素的寬度 */
+      margin-bottom: 10px;
+      width: 50%;
     }
   </style>
 </head>
