--- a/Ophysics.html
+++ b/Ophysics.html
@@ -136,6 +136,7 @@
             <ul>
               <li class="section" onclick="handleSectionClick(this)">功與能</li>
               <li class="section" onclick="handleSectionClick(this)">力學能守恆</li>
+               <li class="section" onclick="handleSectionClick(this)">微觀尺度的能量</li>
             </ul>
           </li>
         </ul>
