--- a/Ophysics.html
+++ b/Ophysics.html
@@ -156,8 +156,8 @@
       <div id="videoContainer" style="display: none;">
         <iframe id="vedioUrl" src="" width="640" height="360" allow="autoplay"></iframe>
         <div align="right">
-          <p>影片來源:<a target="_blank" href="https://www.youtube.com/@CooC-Cloud">臺北酷課雲</a></p>
-          <p>題目來源:<a target="_blank" href="https://guidephy.github.io/">觀高林仟弘</a></p>
+          <p>影片來源:<a target="_blank" href="https://www.youtube.com/@CooC-Cloud">臺北酷課雲</a><br>
+          題目來源:<a target="_blank" href="https://guidephy.github.io/">觀高林仟弘</a></p>
         </div>
         <div id="Question" style="display: none;">
           <div class="question">
