--- a/Ophysics.html
+++ b/Ophysics.html
@@ -138,6 +138,7 @@
               <li class="section" onclick="handleSectionClick(this)">力學能守恆</li>
               <li class="section" onclick="handleSectionClick(this)">微觀尺度的能量</li>
               <li class="section" onclick="handleSectionClick(this)">能量守恆</li>
+              <li class="section" onclick="handleSectionClick(this)">核能</li>
             </ul>
           </li>
         </ul>
